day13_random_choice_picker/style.css
@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700;800&display=swap');
* {
  box-sizing: border-box;

}


body {
  font-family: 'Mulish', sans-serif;
  background-color: #2B88F0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  overflow: hidden;
  margin: 0;
}

h3{
  color: #fff;
  margin: 10px 0 20px;
}

.container {
  width: 500px;
}

#textarea {
  border: none;
  display: block;
  width: 100%;
  height: 100px;

  font-family: inherit;
  font-size: 16px;
  padding: 10px;
  margin: 0 0 20px;

}

.tag {
  background-color: #f0932b;
  color: #fff;
  border-radius: 50px;
  padding: 10px 20px;
  margin: 0 5px 10px 0;
  font-size: 14px;
  display: inline-block;
}

/* For when the class tag will be picked randomically and one
of them will be active. */
.tag.highlight {
  background-color: #273c75;
}

